# Sensor-based-Activity-Recognition

./: .gitignore  Daten.dvc  Dateneinlesung.ipynb  EDA.ipynb  README.md  Terminal_befehle.txt  commit_and_push.ps1  commit_data.ps1  pull_data.ps1  pyproject.toml
.dvc/: .gitignore  config
Dashboard/: app.py
Daten/2026-03-03_10-42-47/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  Metadata.csv
Daten/2026-03-03_12-30-32/: Metadata.csv  Orientation.csv  TotalAcceleration.csv
Daten/2026-03-03_12-35-10/: Gravity.csv  Metadata.csv  TotalAcceleration.csv
Daten/2026-03-04_06-59-27/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  Metadata.csv
Daten/2026-03-05_08-16-30/: GyroscopeUncalibrated.csv  Metadata.csv  Orientation.csv
Daten/2026-03-05_08-16-53/: Accelerometer.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv
Daten/2026-03-05_08-17-23/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Metadata.csv  Orientation.csv  Tags.csv
Daten/2026-03-05_08-17-45/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  GyroscopeUncalibrated.csv  Metadata.csv
Daten/2026-03-05_08-18-25/: Gravity.csv  Orientation.csv  TotalAcceleration.csv
Daten/2026-03-05_08-18-52/: Gravity.csv  GyroscopeUncalibrated.csv  Orientation.csv
Daten/2026-03-05_08-24-26/: Gravity.csv  Metadata.csv
Daten/2026-03-09_16-55-34/: AccelerometerUncalibrated.csv  Gravity.csv  Orientation.csv  Tags.csv  TotalAcceleration.csv
Daten/2026-03-10_12-29-01/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Metadata.csv  Orientation.csv  Tags.csv  TotalAcceleration.csv
Daten/2026-03-10_12-34-40/: AccelerometerUncalibrated.csv  Orientation.csv  Tags.csv
Daten/2026-03-10_12-41-43/: Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Orientation.csv  Tags.csv  TotalAcceleration.csv
EDA_Daten/2026-03-03_10-42-47/: GyroscopeUncalibrated.csv  Orientation.csv  TotalAcceleration.csv
EDA_Daten/2026-03-03_12-30-32/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Tags.csv
EDA_Daten/2026-03-03_12-35-10/: Accelerometer.csv  AccelerometerUncalibrated.csv  Gyroscope.csv  (+2 more)
EDA_Notebooks/: Dateneinlesung.ipynb  Datenverteilung.ipynb  EDA.ipynb  check_data.ipynb  check_data_before_adding.ipynb  daten_eda.ipynb  merge_data.ipynb
Model_Notebooks/: Deep_Learning.ipynb  Model_Vergleich.ipynb  Model_Vorbereitung.ipynb
Model_data/: merged_df_silas_test.parquet  test_silas.npz  y_test.npy  y_train.npy
Z_ARCHIV/: ML_Hyperparameter_tuning.ipynb  best_hyperparameters.json
(+203 files in other folders)
