[project]
name = "sensor-based-activity-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessica Schmid",email = "jessica.schmid@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
dvc = "^3.66.1"
ipykernel = "^7.2.0"

[tool.poetry]
package-mode = false