[project]
name = "sensor-based-activity-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Jessica Schmid",email = "jessica.schmid@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1"
dependencies = [
    "pandas (>=2.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "wandb (>=0.26.0,<0.27.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
dvc = "^3.66.1"
ipykernel = "^7.2.0"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"  # cu118 falls CUDA 11.8
priority = "explicit"



[tool.poetry.dependencies]
torch = {source = "pytorch-cuda"}
torchvision = {source = "pytorch-cuda"}
torchaudio = {source = "pytorch-cuda"}
[tool.poetry]
package-mode = false